// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItem should render CategoryItem component 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "gap": 8,
    }
  }
  testID="category"
>
  <View
    accessibilityRole="button"
    focusVisibleStyle={{}}
    focusable={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#909090",
        "borderBottomColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 0,
        "borderRightColor": "transparent",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "transparent",
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "borderTopWidth": 0,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": "fit-content",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "shadowColor": "rgb(0,0,0)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
  >
    <Image
      alt="Polular"
      source={
        {
          "uri": "https://i.ibb.co/PQztKcN/star-1.png",
        }
      }
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      {
        "color": "#999",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
    suppressHighlighting={true}
  >
    Polular
  </Text>
</View>
`;

exports[`CategoryItem should render CategoryItem component with props isActive 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "gap": 8,
    }
  }
  testID="category"
>
  <View
    accessibilityRole="button"
    focusVisibleStyle={{}}
    focusable={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#242424",
        "borderBottomColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 0,
        "borderRightColor": "transparent",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "transparent",
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "borderTopWidth": 0,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": "fit-content",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "shadowColor": "rgb(0,0,0)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
  >
    <Image
      alt="Polular"
      source={
        {
          "uri": "https://i.ibb.co/PQztKcN/star-1.png",
        }
      }
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      {
        "color": "#242424",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
    suppressHighlighting={true}
  >
    Polular
  </Text>
</View>
`;
